<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
android:gravity="center_vertical"
android:orientation="vertical"
android:background="@color/colorPrimary"
android:paddingStart="@dimen/activity_horizontal_margin"
android:paddingEnd="16dp"
android:paddingTop="16dp"
android:paddingBottom="16dp"
tools:context=".LoginActivity">

<ImageView
    android:id="@+id/imageView"
    android:layout_width="249dp"
    android:layout_height="179dp"
    android:layout_gravity="center"
    android:layout_marginBottom="20dp"
    android:contentDescription="@string/logo_eduquer"
    android:src="@drawable/eduquer2_transparent" />

<EditText
    android:id="@+id/Login_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@android:color/white"
    android:hint="@string/username"
    android:inputType="textPersonName"
    android:padding="10dp"
    tools:ignore="Autofill"/>

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@android:color/white"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:padding="10dp"
    tools:ignore="Autofill" />

<Button
    android:id="@+id/button_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#ff833a"
    android:text="@string/log_in"
    android:textColor="@android:color/white"
    android:onClick="moveToMain"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    android:text="@string/no_account"
    android:textColor="@android:color/black"/>

<Button
    android:id="@+id/button_register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#e65100"
    android:text="@string/register"
    android:textColor="@android:color/white"/>

</LinearLayout>