<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimary"
tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/small_padding"
    android:paddingEnd="@dimen/small_padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/RuangLes"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="Ruang Les"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#00acc1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/biology"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/biology"

                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kelas Aktif" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/chemistry"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/chemistry"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Histori Kelas" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/roboguru"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/caption"
                    android:layout_width="362dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="14dp"
                    android:paddingStart="5dp"
                    android:text="#Belajarjadihebat dengan &#xA; Guru Privat datang ke Rumah "
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/jaminanpuas"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="379dp"
                android:layout_height="74dp">

                <TextView
                    android:id="@+id/content_jamin"
                    android:layout_width="249dp"
                    android:layout_height="61dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="5dp"
                    android:text="@string/jamin_puas"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/jaminan"
                    android:layout_width="75dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@+id/content_jamin"
                    android:contentDescription="thumbsupjaminan"
                    android:focusableInTouchMode="true"
                     />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/gurubanyak"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="379dp"
                android:layout_height="74dp">

                <TextView
                    android:id="@+id/content_guru"
                    android:layout_width="253dp"
                    android:layout_height="61dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="6dp"
                    android:paddingStart="5dp"
                    android:text="@string/guru_les"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/guru"
                    android:layout_width="69dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@+id/content_guru"
                    android:contentDescription="thumbsupjaminan"
                    android:focusableInTouchMode="true"
                     />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/matapelajaran"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="379dp"
                android:layout_height="74dp">

                <TextView
                    android:id="@+id/content_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="61dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="0dp"
                    android:paddingStart="5dp"
                    android:text="@string/mata_pelajaran"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/materikelas"
                    android:layout_width="69dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@+id/content_subject"
                    android:contentDescription="thumbsupjaminan"
                    android:focusableInTouchMode="true"
                    android:src="@drawable/notepad" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/waktubelajar"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="379dp"
                android:layout_height="74dp">

                <TextView
                    android:id="@+id/content_waktu"
                    android:layout_width="246dp"
                    android:layout_height="61dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="0dp"
                    android:paddingStart="5dp"
                    android:text="@string/belajar_everywhere"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/hourglass"
                    android:layout_width="69dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@+id/content_waktu"
                    android:contentDescription="thumbsupjaminan"
                    android:focusableInTouchMode="true"
                     />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/special"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="#ffb74d"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_special"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/special_ads"
                android:textSize="@dimen/text_size_medium"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>